--- a/music/index.html
+++ b/music/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="header ">
+        <div class="container">
+         <a href="../" data-scroll-to=""><br>映像のページへ</a>
+        </div>
+      </header>
     <div class="title-container">
         <h1><br><br>作った音楽とか</h1>
             <p>めっちゃ音質が悪いので、高音質な方を聞きたければ、Twitterに飛んでください!</p><br>
