--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
       </header>
     <div class="title-container">
-        <h1><br><br>作った映像とか<br><br><br></h1>
-            <p></p><br>
+        <h1><br><br>作った映像とか</h1>
+            <p>映像のご依頼は、気軽にDMからお問い合わせください！</p><br><br><br><br><br>
     </div>
     <div class="video-gallery">
         <div class="video-item">
