--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     </div>
     <div class="video-gallery">
         <div class="video-item">
+            <h3>egoism<br><br><br></h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/F9MxJHnAGUE?si=gXNYjzEaZbT49Zur" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
             <h3>ルーマー<br><br><br></h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/J0HAsff2kJc?si=exEh5h-rbGTto3vS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -78,7 +82,15 @@
         </div>
         <div class="video-item">
             <h3>ブリンバンバン<br><br><br></h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/1BfbrNreyeY?si=7nZzH5ayqs25tBgF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1BfbrNreyeY?si=d83et4bvH10DU0QO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <h3>砂の惑星<br><br><br></h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1XGulWngENY?si=aj_OfzPNKi8Jax3y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <h3>Virtual Insanity<br><br><br></h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/L1gGs8RnFTg?si=pUW-8SBJxVYhB9q6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
